Fixes for Windows failed tests