@@ -1,7 +1,10 @@
 package com.legadi.cli.jurl.common;
 
+import static com.legadi.cli.jurl.embedded.util.FilenameUtils.toSystemSeparator;
+
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Assertions;
@@ -12,24 +15,24 @@ import com.legadi.cli.jurl.embedded.EmbeddedAPIAbstractTest;
 public class CurlBuilderTest extends EmbeddedAPIAbstractTest {
 
     @Test
-    public void buildPostBinary() throws IOException {
+    public void buildPostBinary() throws IOException, URISyntaxException {
         CurlBuilder curlBuilder = new CurlBuilder()
-            .setUrl(new URL("http://localhost:" + port + "/basic/body"))
+            .setUrl(new URI("http://localhost:" + port + "/basic/body").toURL())
             .setMethod("POST")
             .setDataBinary(Paths.get("src/test/resources/basic-functions.body.json"))
             .addHeader("Content-Type", "application/json");
         String expected = "curl -X POST"
             + " -H \"Content-Type: application/json\""
-            + " --data-binary \"@src/test/resources/basic-functions.body.json\""
+            + " --data-binary \"@" + toSystemSeparator("src/test/resources/basic-functions.body.json") + "\""
             + " \"http://localhost:" + port + "/basic/body\"";
 
         Assertions.assertEquals(expected, curlBuilder.build());
     }
 
     @Test
-    public void buildWithoutMethod() throws IOException {
+    public void buildWithoutMethod() throws IOException, URISyntaxException {
         CurlBuilder curlBuilder = new CurlBuilder()
-            .setUrl(new URL("http://localhost:" + port + "/basic/body"));
+            .setUrl(new URI("http://localhost:" + port + "/basic/body").toURL());
         String expected = "curl \"http://localhost:" + port + "/basic/body\"";
 
         Assertions.assertEquals(expected, curlBuilder.build());
@@ -44,9 +47,9 @@ public class CurlBuilderTest extends EmbeddedAPIAbstractTest {
     }
 
     @Test
-    public void buildPostFile() throws IOException {
+    public void buildPostFile() throws IOException, URISyntaxException {
         CurlBuilder curlBuilder = new CurlBuilder()
-            .setUrl(new URL("http://localhost:" + port + "/file"))
+            .setUrl(new URI("http://localhost:" + port + "/file").toURL())
             .setMethod("POST")
             .addForm("timestamp", "2023-10-13T03:50:54.792")
             .addFile("file", "src/test/resources/file.csv", "uploaded.csv", "text/csv")
@@ -61,9 +64,9 @@ public class CurlBuilderTest extends EmbeddedAPIAbstractTest {
     }
 
     @Test
-    public void buildPostFileWithoutName() throws IOException {
+    public void buildPostFileWithoutName() throws IOException, URISyntaxException {
         CurlBuilder curlBuilder = new CurlBuilder()
-            .setUrl(new URL("http://localhost:" + port + "/file"))
+            .setUrl(new URI("http://localhost:" + port + "/file").toURL())
             .setMethod("POST")
             .addFile("file", "src/test/resources/file.csv", null, null)
             .addHeader("Content-Type", "multipart/form-data");
